--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "shadcn": "^2.0.7",
     "web-vitals": "^2.1.4"
   },
