--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.8.3",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
