--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@autocomplete/material-ui": "^0.0.17",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@mui/icons-material": "^6.1.0",
     "@mui/material": "^6.1.0",
     "@radix-ui/react-accordion": "^1.2.0",
