--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/axios": "^0.14.0",
+    "@types/react": "^18.3.9",
+    "@types/react-dom": "^18.3.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "leaflet": "^1.9.4",
@@ -30,6 +33,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
     "shadcn": "^2.0.7",
+    "typescript": "^5.6.2",
     "typography": "^0.16.24",
     "web-vitals": "^2.1.4"
   },
