--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.3.3",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.441.0",
+    "primereact": "^10.8.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-bootstrap-icons": "^1.11.4",
@@ -33,7 +34,6 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
     "shadcn": "^2.0.7",
-    "typescript": "^5.6.2",
     "typography": "^0.16.24",
     "web-vitals": "^2.1.4"
   },
