--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@heroicons/react": "^2.1.5",
     "@mui/icons-material": "^6.1.0",
     "@mui/material": "^6.1.0",
+    "@mui/x-charts": "^7.19.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@react-google-maps/api": "^2.19.3",
