--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-bootstrap-icons": "^1.11.4",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-medium-image-zoom": "^5.2.10",
