--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@ark-ui/react": "^4.1.1",
     "@autocomplete/material-ui": "^0.0.17",
+    "@ckeditor/ckeditor5-build-classic": "^43.2.0",
+    "@ckeditor/ckeditor5-react": "^9.3.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
@@ -12,9 +14,9 @@
     "@heroicons/react": "^2.1.5",
     "@mui/icons-material": "^6.1.0",
     "@mui/material": "^6.1.0",
+    "@mui/x-charts": "^7.19.0",
     "@pandacss/dev": "^0.46.1",
     "@pandacss/preset-base": "^0.46.1",
-    "@mui/x-charts": "^7.19.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^3.1.4",
@@ -38,6 +40,7 @@
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-medium-image-zoom": "^5.2.10",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
