--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
     "@ark-ui/react": "^4.1.1",
     "@autocomplete/material-ui": "^0.0.17",
     "@ckeditor/ckeditor5-build-classic": "^43.2.0",
@@ -13,8 +14,10 @@
     "@headlessui/react": "^2.1.8",
     "@heroicons/react": "^2.1.5",
     "@mui/icons-material": "^6.1.0",
-    "@mui/material": "^6.1.0",
+    "@mui/material": "^6.1.4",
     "@mui/x-charts": "^7.19.0",
+    "@mui/x-date-pickers": "^7.21.0",
+    "@mui/x-date-pickers-pro": "^7.21.0",
     "@pandacss/dev": "^0.46.1",
     "@pandacss/preset-base": "^0.46.1",
     "@radix-ui/react-accordion": "^1.2.0",
@@ -27,9 +30,10 @@
     "@types/axios": "^0.14.0",
     "@types/react": "^18.3.9",
     "@types/react-dom": "^18.3.0",
-    "antd": "^5.21.2",
+    "antd": "^5.21.4",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "dayjs": "^1.11.13",
     "evergreen-ui": "^7.1.9",
     "html-to-text": "^9.0.5",
     "leaflet": "^1.9.4",
@@ -38,6 +42,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-bootstrap-icons": "^1.11.4",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-loader-spinner": "^6.1.6",
