--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "html-to-text": "^9.0.5",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.441.0",
+    "mapbox-gl": "^3.7.0",
     "primereact": "^10.8.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
@@ -45,6 +46,7 @@
     "react-input-emoji": "^5.9.0",
     "react-leaflet": "^4.2.1",
     "react-loader-spinner": "^6.1.6",
+    "react-map-gl": "^7.1.7",
     "react-medium-image-zoom": "^5.2.10",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
