--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dayjs": "^1.11.13",
     "evergreen-ui": "^7.1.9",
     "html-to-text": "^9.0.5",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.441.0",
     "mapbox-gl": "^3.7.0",
