--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^6.1.0",
     "@mui/material": "^6.1.0",
     "@mui/x-charts": "^7.19.0",
+    "@mui/x-data-grid": "^7.22.1",
     "@pandacss/dev": "^0.46.1",
     "@pandacss/preset-base": "^0.46.1",
     "@radix-ui/react-accordion": "^1.2.0",
@@ -48,6 +49,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-map-gl": "^7.1.7",
     "react-medium-image-zoom": "^5.2.10",
+    "react-multi-date-picker": "^4.5.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
