--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^2.1.8",
     "@heroicons/react": "^2.1.5",
     "@mui/icons-material": "^6.1.0",
+    "@mui/lab": "^6.0.0-beta.14",
     "@mui/material": "^6.1.0",
     "@mui/x-charts": "^7.19.0",
     "@pandacss/dev": "^0.46.1",
