--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@goongmaps/goong-map-react": "^1.1.2",
     "@headlessui/react": "^2.1.8",
     "@heroicons/react": "^2.1.5",
     "@mui/icons-material": "^6.1.0",
