--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:prod": "env-cmd -f prod.env react-scripts start",
+    "build:prod": "env-cmd -f prod.env react-scripts build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
